results/SpecGenBench/0-shot/log-Return100Nested-2023_11_29_00_39_17.txt
public class Return100Nested {
    //@ ensures \result == 100;
    public static int return100 () {
        int res = 0;
        //@ loop_invariant res == i * 10 + j;
        //@ decreases 10 - i;
        for(int i = 0; i < 10; i++) {
            //@ loop_invariant res == i * 10 + j;
            //@ decreases 10 - j;
            for(int j = 0; j < 10; j++) {
                res = res + 1;
            }
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/Return100Nested.java:5: error: cannot find symbol
        //@ loop_invariant res == i * 10 + j;
                                           ^
  symbol:   variable j
  location: class Return100Nested
1 error

